compiler-core/src/parse/snapshots/gleam_core__parse__tests__case_invalid_case_pattern.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nfn main() {\n    case 1 {\n        -> -> 0\n    }\n}\n"
---
----- SOURCE CODE

fn main() {
    case 1 {
        -> -> 0
    }
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:4:9
  │
4 │         -> -> 0
  │         ^^ I was not expecting this

Found `->`, expected one of: 
- `}`
- a case clause
